Fix spacing due to added thanks

--- a/assets/scss/_thanks.scss
+++ b/assets/scss/_thanks.scss
@@ -6,8 +6,8 @@
   .anchor:before {
     content: '';
     display: block;
-    padding-top: 180px;
-    margin-top: -180px;
+    padding-top: 220px;
+    margin-top: -220px;
 
     @media (max-width: 900px) {
       padding-top: 110px;
@@ -16,7 +16,7 @@
   }
 
   li:first-child {
-    padding-top: 180px;
+    padding-top: 220px;
     margin-top: -140px;
 
     @media (max-width: 900px) {
